--- a/CSS/style.css
+++ b/CSS/style.css
@@ -128,7 +128,7 @@ body {
   position: absolute;
   border-radius: 2px;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
 }
 
 .head-container{
@@ -640,8 +640,6 @@ body {
   color: var(--accent-color);
 }
 
-/*--------------------footer------------*/
-
 .footer-social-title{
   font-family: Roboto;
   font-style: normal;
@@ -671,15 +669,15 @@ body {
   margin-bottom: 9px;
 }
 
-.footer-addresses{
-  margin-right: 70px;
+.footer-addressess-part{
+  margin-right: 85px;
 }
 
 .contact-list-item:last-child{
   margin-bottom: 0px;
 }
 
-.footer-social{
+.footer-social-part{
   margin-right: 93px;
 }
 
@@ -909,7 +907,7 @@ body {
   top: 0;
   left: 0;
   position: absolute;
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
@@ -993,14 +991,14 @@ body {
   top: 50%;
   left: 50%;
   transform: scale(1) translate(-50%, -50%);
-  transition: opacity 250ms;
+  transition: opacity 250ms, transform 250ms;
   padding: 40px;
 }
 
 .modal-close{
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -1052,10 +1050,10 @@ body {
 }
 
 .modal-input-comment{
+  display: block;
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
   border-radius: 4px;
   outline-color: var(--accent-color);
   padding: 12px 16px;
@@ -1102,6 +1100,11 @@ body {
   margin-right: 8px;
   display: block;
   border-radius: 2px;
+}
+
+.form-checkbox:hover,
+.form-checkbox:focus{
+  border: var(--accent-color);
 }
 
 .form-checkbox:checked + .modal-form-checkbox::before{
@@ -1175,7 +1178,8 @@ body {
   fill: var(--secondary-title-color);
   position: absolute;
   left: 12px;
-  top: 11px;
+  top: 50%;
+  transform: translateY(-50%);
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
