--- a/CSS/style.css
+++ b/CSS/style.css
@@ -228,7 +228,8 @@ body {
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_images/header-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
+  background-size: cover;
+  width: 1600px;
   margin: 0 auto;
 }
 /*---------------button-style---------------*/
